[Beta] Prevent text overflow (#5028)

--- a/beta/src/styles/index.css
+++ b/beta/src/styles/index.css
@@ -74,6 +74,7 @@
   body {
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
   }
 
   /* Start purging... */
